# devcontainer

./: .devcontainer.json  .gitmodules  Containerfile  Dockerfile  LICENSE  build_root.bash  build_user.bash  get_vs_ver.sh  install_vs_server.sh  noxfile.py  piped.toml  pyproject.toml  renovate.json  renovate.json5
.github/: dependabot.yml
.github/workflows/: build-container.yml  docker-publish.yml  lint-actions.yml  resync-piped.yml  update-licence.yml
artifacts/: dnf.conf  extend.bash
artifacts/bashrc.d/: aliases.bash  brew.bash  env.bash  environment.bash  mise.bash
artifacts/config/bash/: environment.bash  general.bash
artifacts/config/just/: justfile
artifacts/config/mise/: config.toml
config/: general.bashrc  mise.toml
scripts/: build_root.py  build_user.py  environ.py
