[project]
name = "Devcontainer"
description = "A pre-built devcontainer base image"
version = "0.1.0"
requires-python = ">=3.8"

[dependency-groups]
freeze-locks = ["uv"]
templating = ["Jinja2>=3.1.2"]

[tool.piped]
default_sessions = ["verify-markup", "spell-check"]
top_level_targets = []

[tool.piped.github_actions.build_container]
[tool.piped.github_actions.freeze_for_pr]
[tool.piped.github_actions.resync_piped]
[tool.piped.github_actions.update_licence]
[tool.piped.github_actions.upgrade_locks]
